test/src/e2e_vm_tests/test_programs/should_pass/language/primitive_type_argument/src/bar/baz.sw
library baz;

pub struct ExampleStruct<T, U> {
  a_field: T,
  b_field: U 
}
