test/src/e2e_vm_tests/test_programs/should_fail/primitive_type_argument/src/bar/baz.sw
library baz;

pub struct ExampleStruct<T> {
  a_field: T
}
